# event-driven-order-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  ruff.yml
app/: exceptions.py  logging_config.py  main.py  sandbox.py
app/adapters/: json_idempotency_adapter.py  json_inventory_adapter.py  json_invoice_adapter.py  json_notification_adapter.py  json_order_adapter.py  json_queue_adapter.py
app/api/: main.py
app/core/: config.py  dependencies.py  logging_config.py
app/models/: enums.py  idempotency_keys.py  inventory.py  invoices.py  notifications.py  order.py  orders.py  orders_request.py  processing_queue.py  types.py
app/repositories/: idempotency_repository.py  inventory_repository.py  invoice_repository.py  notification_repository.py  order_repository.py  processing_queue_repository.py
app/services/: idempotency_service.py  inventory_service.py  invoice_service.py  notification_service.py  order_pipeline_service.py  order_service.py  payment_service.py  queue_service.py  worker_service.py
app/storage/: in_memory.py  json_storage.py
app/workers/: order_worker.py
app/workflows/: create_order_workflow.py  order_pipeline_service.py  protocols.py  worker_service.py
data/: inventory.json  invoices.json  notifications.json
docs/: architecture.md  version_history.md
experiments/: failure_sandbox.py  order_pipeline_sandbox.py
scripts/: reset_json_data.py
tests/: helpers.py  test_create_order_api.py  test_inventory_failure_behavior.py  test_order_pipeline.py  test_worker_service.py
(+20 files in other folders)
