[project]
name = "event-driven-order-platform"
version = "0.1.0"
description = "Local order processing system (Phase 1)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.3",
]

[tool.ruff.lint]
ignore = ["F401"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
