[project]
name = "event-driven-order-platform"
version = "0.2.0"
description = "Local order processing system (Phase 1)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
ignore = ["F401"]
